MComix 0.92 (4.0.5)

    - If a library collection has sub-collections, the books from these
      sub-collections will be shown as well when the collection is opened.

    - The "Bookmarks" menu can be accessed via the normal menu bar again.
      (by Alan Horkan)

    - Updated Japanese translation (by Keita Haga)

MComix 0.91

    - Fixed excessive memory consumption due to cached pixmaps not being
      properly evicted.

    - Fixed certain wait conditions that prevented MComix from exiting
      on Win32.

    - Fixed "Remove from the library" deleting the actual book instead of
      its library thumbnail.

    - The "Go to page" dialog now shows thumbnails when they are available, 
      not only after all thumbnails have been loaded. Additionally,
      some usability improvements have been done to the dialog, such as
      instantly updating the thumbnail when editing the page box, and setting
      focus to the page box when the dialog is opened.

    - When passing more than one file to MComix at startup, only those files
      will be opened. This differs from the traditional behavior, where
      MComix would only consider the first file and open all remaining
      files in the same directory.
      If the passed files are archives, MComix will only open these archives
      when "Automatically open next archive" is enabled. If only a single file
      is passed, MComix will keep opening all files in that directory.

    - When the first/last file of a directory is open, pressing CTRL and
      advancing to the previous/next page (e.g. by pressing CTRL+Space),
      files in the previous/next sibling directory will be opened.
      Note that this feature is disabled by intent when MComix has been
      opened with a list of more than one file.

      This feature is also available via CTRL+N/CTRL+P, or the menu bar.

    - Speed up thumbnail generation by parallelizing load tasks.
      (inspired by David Zaragoza, who originally suggested to use